Co-locate java.policy and default.policy with sun.security.provider.PolicyFile in jimage for hermetic Java support.
Based on zoom discussions with @AlanBateman and others, policy files are expected to be removed in early JDK 24 or JDK 25. So I tried making minimum changes to support hermetic jimage packaged policy files without adding modifications to file:${java.home}/conf/security/java.policy format or any runtime semantics.

For hermetic java.policy, it uses `PolicyFile.class.getResource("java.policy")` to get the URL. I've checked traced bytecode to confirm that it doesn't go through JrtFileSystem to load the policy file using URL.